--- a/src/components/Checkbox/Checkbox.scss
+++ b/src/components/Checkbox/Checkbox.scss
@@ -1,12 +1,13 @@
 $greenspark-green: #3b755f;
 $greenspark-white: #f9f9f9;
 $greenspark-light-green: #afc6bd;
-$greenspark-light-green-transparent: #afc6bda6;
+$greenspark-light-green-transparent: #3b755f20;
 $greenspark-switch-border: #f2ebdb;
 $greenspark-switch-outer-border: #b0b0b0;
 
 .checkbox-container {
-  display: flex;
+  display: inline-flex;
+  margin: 0.25rem;
   position: relative;
   height: 2rem;
   width: 2rem;
@@ -17,35 +18,42 @@ $greenspark-switch-outer-border: #b0b0b0;
   input {
     width: 100%;
     height: 100%;
-    appearance: none    ;
+    appearance: none;
     position: absolute;
     left: 0;
     top: 0;
     margin: 0;
     &:checked + .checkbox-container-checkmark {
       opacity: 1;
-      outline: 0px solid;
+      border: 3px solid transparent;
       background-color: $greenspark-green;
+      color: white;
+      svg {
+        opacity: 1;
+        margin: auto;
+      }
     }
   }
 
   &-checkmark {
     margin: 0 auto;
-    padding: 3px;
     width: 100%;
     align-items: center;
     display: flex;
     color: white;
-    border-radius: 3px;
-    outline: 4px solid black;
-    transition: outline 0.3s ease, background-color 0.3s ease-in-out; //
+    border-radius: 5px;
+    border: 3px solid black;
+    transition: border 0.3s ease, background-color 0.3s ease-in-out,
+      color 0.3s ease, opacity 0.3s ease; //
     svg {
-      margin: auto;
+      width: 100%;
+      opacity: 0;
     }
   }
 }
 .checkbox-container-shadow {
   position: absolute;
+  border: none;
   width: 100%;
   height: 100%;
   background-color: transparent;
