--- a/src/components/Checkbox/Checkbox.scss
+++ b/src/components/Checkbox/Checkbox.scss
@@ -4,10 +4,12 @@ $greenspark-light-green: #afc6bd;
 $greenspark-light-green-transparent: #3b755f20;
 $greenspark-switch-border: #f2ebdb;
 $greenspark-switch-outer-border: #b0b0b0;
+$greenspark-white: #ffffff;
+$greenspark-white-transparent: #ffffff20;
 
 .checkbox-container {
   display: inline-flex;
-  margin: 0.25rem;
+  margin: 0.125rem;
   position: relative;
   height: 2rem;
   width: 2rem;
