--- a/src/components/ProductWidget/ProductWidget.scss
+++ b/src/components/ProductWidget/ProductWidget.scss
@@ -11,7 +11,6 @@ $greenspark-blue: #2e3a8c;
 .product-widget-container {
   width: 14rem;
   height: 12rem;
-  border: 1px solid black;
   &-header {
     height: 33%;
     align-items: center;
@@ -20,8 +19,8 @@ $greenspark-blue: #2e3a8c;
     margin: auto;
     &-items {
       display: flex;
-      margin: auto;
-      gap: 0.5rem;
+      margin: auto auto auto 0.5rem;
+      gap: 0.75rem;
       &-heading {
         margin: auto;
         align-items: center;
@@ -34,5 +33,15 @@ $greenspark-blue: #2e3a8c;
     flex-direction: column;
     justify-content: space-around;
     height: 67%;
+    &-item {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      .checkbox-container,
+      .color-radio-button-container {
+        height: 1.25rem;
+        width: 1.25rem;
+      }
+    }
   }
 }
