--- a/src/components/Tooltip/Tooltip.scss
+++ b/src/components/Tooltip/Tooltip.scss
@@ -23,5 +23,6 @@ $greenspark-switch-outer-border: #b0b0b0;
     color: $greenspark-green;
     font-weight: 200;
     cursor: pointer;
+    text-decoration: none;
   }
 }
