--- a/src/components/Checkbox/Checkbox.scss
+++ b/src/components/Checkbox/Checkbox.scss
@@ -1,11 +1,4 @@
-$greenspark-green: #3b755f;
-$greenspark-white: #f9f9f9;
-$greenspark-light-green: #afc6bd;
-$greenspark-light-green-transparent: #3b755f20;
-$greenspark-switch-border: #f2ebdb;
-$greenspark-switch-outer-border: #b0b0b0;
-$greenspark-white: #ffffff;
-$greenspark-white-transparent: #ffffff20;
+@import '../../shared/globalStyles.scss';
 
 .checkbox-container {
   display: inline-flex;
