--- a/src/components/ColorRadioButton/ColorRadioButton.scss
+++ b/src/components/ColorRadioButton/ColorRadioButton.scss
@@ -1,4 +1,4 @@
-@import '../../shared/globalStyles.scss';
+@import "../../shared/globalStyles.scss";
 
 .color-radio-button-container {
   width: 2rem;
@@ -17,8 +17,11 @@ input.color-radio-button[type="radio"] {
   width: 100%;
   height: 100%;
   transition: 0.3s;
+
   &:hover {
-    background-color: $greenspark-white-transparent;
+    @media (pointer: fine) {
+      background-color: $greenspark-white-transparent;
+    }
   }
 }
 
