--- a/src/components/Tooltip/Tooltip.scss
+++ b/src/components/Tooltip/Tooltip.scss
@@ -9,7 +9,7 @@
   border-radius: 0.25rem;
   padding: 1rem 0.5rem;
   text-align: center;
-  box-shadow: 0.5rem 1rem 3rem 1px rgba(0, 0, 0, 0.315);
+  box-shadow: 0rem 2rem 2rem -0.75rem rgba(0, 0, 0, 0.2);
   background-color: white;
 
   p {
