--- a/src/shared/globalStyles.scss
+++ b/src/shared/globalStyles.scss
@@ -1,3 +1,10 @@
+// Seb Website
+$background-color: #121113;
+$nav-color: #000000bb;
+$accent-color: #11a6c0;
+$font-color: white;
+$transparent-color: #ffffff00;
+// Greenspark Challenge
 $greenspark-green: #3b755f;
 $greenspark-white: #f9f9f9;
 $greenspark-light-green: #afc6bd;
