scss variables moved out

--- a/src/components/Checkbox/Checkbox.scss
+++ b/src/components/Checkbox/Checkbox.scss
@@ -1,4 +1,4 @@
-@import '../../shared/globalStyles.scss';
+@import '../../shared/globalVarialbes.scss';
 
 .checkbox-container {
   display: inline-flex;
