--- a/src/components/ColorRadioButton/ColorRadioButton.scss
+++ b/src/components/ColorRadioButton/ColorRadioButton.scss
@@ -1,4 +1,4 @@
-@import "../../shared/globalStyles.scss";
+@import "../../shared/globalVarialbes.scss";
 
 .color-radio-button-container {
   width: 2rem;
