--- a/src/components/ProductWidget/ProductWidget.scss
+++ b/src/components/ProductWidget/ProductWidget.scss
@@ -1,4 +1,4 @@
-@import '../../shared/globalStyles.scss';
+@import '../../shared/globalVarialbes.scss';
 
 .product-widget-container {
   width: 14rem;
