--- a/src/components/LinkButton/LinkButton.scss
+++ b/src/components/LinkButton/LinkButton.scss
@@ -1,4 +1,4 @@
-@import '../../shared//globalStyles.scss';
+@import '../../shared//globalVarialbes.scss';
 
 .link-button {
     border-radius: 1rem;
