--- a/src/components/ContentCard/ContentCard.scss
+++ b/src/components/ContentCard/ContentCard.scss
@@ -1,4 +1,7 @@
 .ContentCard{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
     background-color: rgba(255, 255, 255, 0.10);
     border-radius: 1rem;
     margin: auto;
