--- a/src/shared/globalVarialbes.scss
+++ b/src/shared/globalVarialbes.scss
@@ -4,6 +4,7 @@ $nav-color: #000000bb;
 $accent-color: #11a6c0;
 $font-color: white;
 $transparent-color: #ffffff00;
+$semi-transparent: #ffffff75;
 // Greenspark Challenge
 $greenspark-green: #3b755f;
 $greenspark-white: #f9f9f9;
