--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -10,8 +10,11 @@
     cursor: pointer;
     text-decoration: none;
     font-family: inherit;
+    font-size: 1rem;
 
     &:hover {
-        box-shadow: 0 0 2rem $accent-color;
+        @media (pointer: fine) {
+            box-shadow: 0 0 2rem $accent-color;
+        }
     }
 }
